Shared: Chat: Fix wrong size on mobile

--- a/packages/shared/components/chat/components/chat-header/ChatHeader.module.scss
+++ b/packages/shared/components/chat/components/chat-header/ChatHeader.module.scss
@@ -35,6 +35,7 @@
 
   display: flex;
   align-items: center;
+  flex-shrink: 0;
 
   gap: 16px;
 
