--- a/packages/shared/components/chat/components/chat-message-body/ChatMessageBody.module.scss
+++ b/packages/shared/components/chat/components/chat-message-body/ChatMessageBody.module.scss
@@ -53,6 +53,8 @@
 }
 
 .chatMessageContainer {
+  box-sizing: border-box;
+
   display: flex;
   flex-direction: column-reverse;
 
